<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background = "@color/light_blue"
    tools:context=".student.StudentDashboardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="40dp"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:paddingStart="20dp">

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/user_icon_new"
            android:contentDescription="@string/view_profile_content"
            android:clickable="true"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_dashboard"
            android:layout_toEndOf="@+id/profile_icon"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/username_textview_student_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sheenam"
            android:layout_below ="@+id/welcome_message"
            android:layout_toEndOf="@+id/profile_icon"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/linearLayout_icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">


        <ImageView
            android:id="@+id/logout_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/red_logout"
            android:contentDescription="@string/logout_content"
            android:clickable="true"
            android:focusable="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/dashboard_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:layout_below="@+id/profile_icon"
            android:text="@string/always_stay_healthy_message"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_curve_white_rectangle">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_login"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/my_appointment"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin = "60dp"
                android:layout_gravity="center"
                android:background="@drawable/curve_lb_rectangle"
                android:text="@string/my_appointments"
                android:textAlignment="center"
                android:padding="10dp"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/linearLayout1"
            android:background="@drawable/custom_login"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_requested_appt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin = "60dp"
                android:layout_gravity="center"
                android:background="@drawable/curve_lb_rectangle"
                android:text="@string/request_appointment"
                android:textAlignment="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

        

    </RelativeLayout>

</LinearLayout>