<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/light_blue"
    tools:context=".staff.StaffDashboardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"

        android:paddingTop="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="120dp"
            android:text="@string/welcome_dashboard"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/staff_logout_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26" />

        <TextView
            android:id="@+id/textview_staff_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sheenam"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.394"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/dashboard_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/the_first_wealth_is_health"
            android:textColor="@color/white"
            android:paddingStart="33dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/textview_staff_dashboard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/staff_logout_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/profile_icon"
            android:clickable="true"
            android:contentDescription="@string/logout_content"
            android:focusable="true"
            android:src="@drawable/red_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.941"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.373" />

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:clickable="true"
            android:contentDescription="@string/view_profile_content"
            android:focusable="true"
            android:src="@drawable/doctor_profile_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/welcome_message"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.307" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_curve_white_rectangle">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp"
            android:background="@drawable/custom_login"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/appointments_staff"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="60dp"
                android:background="@drawable/curve_lb_rectangle"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/appointments"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/linearLayout1"
            android:background="@drawable/custom_login"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/create_new_appt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="60dp"
                android:background="@drawable/curve_lb_rectangle"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:text="@string/create_new_appointment"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </LinearLayout>



    </RelativeLayout>



</LinearLayout>