<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/light_blue"
    tools:context=".doctor.DoctorDashboardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="40dp"
        android:paddingStart="10dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="122dp"
            android:text="@string/welcome_dashboard"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/doctor_logout_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.204" />

        <TextView
            android:id="@+id/textview_doctor_name_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sheenam"
            android:layout_marginStart="25dp"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.337"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message"
            app:layout_constraintVertical_bias="0.054" />

        <TextView
            android:id="@+id/dashboard_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_first_wealth_is_health"
            android:textColor="@color/white"
            android:paddingTop="5dp"
            android:paddingStart="18dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/textview_doctor_name_dashboard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/doctor_logout_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/profile_icon"
            android:clickable="true"
            android:contentDescription="@string/logout_content"
            android:focusable="true"
            android:src="@drawable/red_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.295" />

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:clickable="true"
            android:contentDescription="@string/view_profile_content"
            android:focusable="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/new_doctor_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/welcome_message"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.149" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_curve_white_rectangle">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/custom_login"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/appointments_doctor"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="60dp"
                android:background="@drawable/curve_lb_rectangle"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/appointments"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/linearLayout1"
            android:background="@drawable/custom_login"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/medical_certificate_doctor"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="60dp"
                android:background="@drawable/curve_lb_rectangle"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:text="Medical Certificates"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>