<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/light_blue"
    tools:context=".admin.AdminDashboardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:paddingStart="10dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="132dp"
            android:text="Welcome!"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/admin_logout_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.379" />

        <TextView
            android:id="@+id/textview_admin_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name..."
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.303"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/dashboard_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingStart="30dp"
            android:text="@string/the_first_wealth_is_health"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/textview_admin_dashboard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/admin_logout_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/admin_profile_icon"
            android:clickable="true"
            android:contentDescription="@string/logout_content"
            android:focusable="true"
            android:src="@drawable/red_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.941"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.373" />

        <ImageView
            android:id="@+id/admin_profile_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:clickable="true"
            android:contentDescription="@string/view_profile_content"
            android:focusable="true"
            android:src="@drawable/admin_profile_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/welcome_message"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.433" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_curve_white_rectangle">



        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_login"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/all_appointments_view"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="60dp"
                android:background="@drawable/curve_lb_rectangle"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="Appointments"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_below="@+id/linearLayout3"

            android:background="@drawable/custom_login"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/all_doctors_view"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="60dp"
                android:background="@drawable/curve_lb_rectangle"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:text="Doctors"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_below="@+id/linearLayout1"
            android:background="@drawable/custom_login"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/all_staff_view"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="60dp"
                android:background="@drawable/curve_lb_rectangle"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="Staff"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>


    </RelativeLayout>
</LinearLayout>